[gd_scene load_steps=27 format=3 uid="uid://pmd56imkhoe6"]

[ext_resource type="Script" uid="uid://j3ho6q5fycib" path="res://addons/gevp/scripts/vehicle.gd" id="1_syssv"]
[ext_resource type="PackedScene" uid="uid://h6vdpba71kpr" path="res://addons/gevp/scenes/smoke_effect.tscn" id="2_5ovfc"]
[ext_resource type="PackedScene" uid="uid://bsyxcukjkqnjk" path="res://Games/cars/models/vaz2110/scene/vaz_2110.tscn" id="2_taasx"]
[ext_resource type="Script" uid="uid://3f6u8rvldkah" path="res://addons/gevp/scripts/wheel.gd" id="3_iwgla"]
[ext_resource type="PackedScene" uid="uid://rssl24l7550f" path="res://maps/scenes/vlados_parkur_swag/scenes/car_wheel.tscn" id="4_gk0v1"]
[ext_resource type="PackedScene" uid="uid://c3ixqkc6k13yi" path="res://addons/gevp/scenes/vehicle_controller.tscn" id="5_vov7g"]
[ext_resource type="Script" uid="uid://cofim6dvmtmj0" path="res://game_components/AuthorityChecker.gd" id="6_nlnay"]
[ext_resource type="Script" uid="uid://5by2ms76p5wg" path="res://addons/simusdev/multiplayer/SD_MPPropertySynchronizer.gd" id="7_5obd8"]
[ext_resource type="Script" uid="uid://vem3fl0vut75" path="res://addons/simusdev/multiplayer/SD_MPPSSyncedBase.gd" id="8_hul6v"]
[ext_resource type="Script" uid="uid://cvr8rp4fvo3m0" path="res://addons/simusdev/multiplayer/SD_MPPSSyncedProperty.gd" id="9_mkcew"]
[ext_resource type="PackedScene" uid="uid://b2hlchrj4h2b7" path="res://addons/gevp/scenes/engine_sound.tscn" id="10_37wps"]
[ext_resource type="Script" uid="uid://c7hu5fiwywarj" path="res://addons/gevp/scripts/camera.gd" id="12_iealf"]
[ext_resource type="AudioStream" uid="uid://ccd5yblns450s" path="res://Games/cars/audio/vaz2110engine.wav" id="12_taasx"]
[ext_resource type="Script" uid="uid://0ksyaacptcju" path="res://game_components/CameraSwitcher.gd" id="13_qs44h"]
[ext_resource type="Script" uid="uid://b7sro85k3hvws" path="res://game_components/seat_driver.gd" id="14_b4pc2"]

[sub_resource type="Curve" id="Curve_bt7kc"]
_data = [Vector2(0, 0.494505), 0.0, 2.04495, 0, 0, Vector2(0.767241, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.758242), -2.03956, 0.0, 0, 0]
point_count = 3

[sub_resource type="BoxShape3D" id="BoxShape3D_yyyvj"]
size = Vector3(2.48244, 1.81328, 6.35705)

[sub_resource type="GDScript" id="GDScript_8mpxf"]
script/source = "extends Node3D

@export var vehicle:Vehicle

func _process(delta: float) -> void:
	$brake_right.light_energy = vehicle.brake_amount
	$brake_left.light_energy = vehicle.brake_amount
"

[sub_resource type="Resource" id="Resource_yi43l"]
script = ExtResource("9_mkcew")
tickrate = 32.0
tickrate_mode = 0
sync_mode = 0
properties = Array[String](["transform"])
sync_at_start = true
interpolation_enabled = true
interpolation_speed = 30.0
node_path = NodePath("..")
reliable = false
mode = 1
metadata/_custom_type_script = "uid://cvr8rp4fvo3m0"

[sub_resource type="Resource" id="Resource_b1e7m"]
script = ExtResource("9_mkcew")
tickrate = 32.0
tickrate_mode = 0
sync_mode = 0
properties = Array[String](["rotation"])
sync_at_start = true
interpolation_enabled = true
interpolation_speed = 30.0
node_path = NodePath("../WheelFrontLeft/FrontLeftWheel")
reliable = false
mode = 1
metadata/_custom_type_script = "uid://cvr8rp4fvo3m0"

[sub_resource type="Resource" id="Resource_aq5ct"]
script = ExtResource("9_mkcew")
tickrate = 32.0
tickrate_mode = 0
sync_mode = 0
properties = Array[String](["rotation"])
sync_at_start = true
interpolation_enabled = true
interpolation_speed = 30.0
node_path = NodePath("../WheelFrontRight/FrontRightWheel")
reliable = false
mode = 1
metadata/_custom_type_script = "uid://cvr8rp4fvo3m0"

[sub_resource type="Resource" id="Resource_uvl71"]
script = ExtResource("9_mkcew")
tickrate = 32.0
tickrate_mode = 0
sync_mode = 0
properties = Array[String](["rotation"])
sync_at_start = true
interpolation_enabled = true
interpolation_speed = 30.0
node_path = NodePath("../WheelRearLeft/RearLeftWheel")
reliable = false
mode = 1
metadata/_custom_type_script = "uid://cvr8rp4fvo3m0"

[sub_resource type="Resource" id="Resource_8mpxf"]
script = ExtResource("9_mkcew")
tickrate = 32.0
tickrate_mode = 0
sync_mode = 0
properties = Array[String](["rotation"])
sync_at_start = true
interpolation_enabled = true
interpolation_speed = 30.0
node_path = NodePath("../WheelRearRight/RearRightWheel")
reliable = false
mode = 1
metadata/_custom_type_script = "uid://cvr8rp4fvo3m0"

[sub_resource type="Resource" id="Resource_a82us"]
script = ExtResource("9_mkcew")
tickrate = 32.0
tickrate_mode = 0
sync_mode = 0
properties = Array[String](["motor_rpm", "throttle_amount"])
sync_at_start = true
interpolation_enabled = false
interpolation_speed = 30.0
node_path = NodePath("..")
reliable = false
mode = 1
metadata/_custom_type_script = "uid://cvr8rp4fvo3m0"

[sub_resource type="Resource" id="Resource_l7flc"]
script = ExtResource("9_mkcew")
tickrate = 32.0
tickrate_mode = 0
sync_mode = 1
properties = Array[String](["emiting"])
sync_at_start = true
interpolation_enabled = false
interpolation_speed = 30.0
node_path = NodePath("../Smoke")
reliable = false
mode = 1
metadata/_custom_type_script = "uid://cvr8rp4fvo3m0"

[sub_resource type="BoxShape3D" id="BoxShape3D_uvl71"]
size = Vector3(1.99048, 1.63178, 1.70746)

[node name="vaz2110" type="RigidBody3D" node_paths=PackedStringArray("front_left_wheel", "front_right_wheel", "rear_left_wheel", "rear_right_wheel")]
script = ExtResource("1_syssv")
front_left_wheel = NodePath("WheelFrontLeft")
front_right_wheel = NodePath("WheelFrontRight")
rear_left_wheel = NodePath("WheelRearLeft")
rear_right_wheel = NodePath("WheelRearRight")
steering_slip_assist = 0.5
countersteer_assist = 0.75
max_steering_angle = 1.2
stability_yaw_engage_angle = 0.1
stability_yaw_strength = 2.0
stability_yaw_ground_multiplier = 4.0
max_torque = 800.0
max_rpm = 6550.0
idle_rpm = 700.0
torque_curve = SubResource("Curve_bt7kc")
motor_moment = 0.3
clutch_out_rpm = 0.0
gear_ratios = Array[float]([3.01, 2.07, 1.43, 1.0, 0.84, 0.5])
final_drive = 4.1
reverse_ratio = 3.28
shift_time = 0.25
automatic_transmission = false
front_variable_split = 0.5
vehicle_mass = 1400.0
front_weight_distribution = 0.526
center_of_gravity_height_offset = -0.14
front_resting_ratio = 0.6
front_damping_ratio = 0.8
front_arb_ratio = 0.5
front_camber = 0.034
front_toe = 0.005
rear_resting_ratio = 0.6
rear_damping_ratio = 0.8
rear_arb_ratio = 0.5
rear_camber = 0.034
rear_toe = 0.005
tire_stiffnesses = {
"Dirt": 0.5,
"Grass": 0.5,
"Road": 20.0
}
coefficient_of_friction = {
"Dirt": 1.4,
"Grass": 1.0,
"Road": 2.0
}
longitudinal_grip_ratio = {
"Dirt": 0.56,
"Grass": 0.8,
"Road": 0.6
}
front_tire_radius = 0.38
rear_tire_radius = 0.38
rear_tire_width = 275.0
coefficient_of_drag = 0.35
frontal_area = 2.19

[node name="vaz2110" parent="." instance=ExtResource("2_taasx")]
transform = Transform3D(-1.5, 0, -2.26494e-07, 0, 1.5, 0, 2.26494e-07, 0, -1.5, 0, 0, 0)

[node name="Smoke" parent="." node_paths=PackedStringArray("vehicle") instance=ExtResource("2_5ovfc")]
process_mode = 3
vehicle = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0207719, 1.21018, -0.0279403)
shape = SubResource("BoxShape3D_yyyvj")

[node name="WheelFrontLeft" type="RayCast3D" parent="." node_paths=PackedStringArray("wheel_node")]
transform = Transform3D(1, -8.47033e-22, 7.10543e-15, -8.47033e-22, 1, 1.42109e-14, 7.10543e-15, -1.42109e-14, 1, -1.3, 0.424, -1.971)
script = ExtResource("3_iwgla")
wheel_node = NodePath("FrontLeftWheel")

[node name="FrontLeftWheel" type="Node3D" parent="WheelFrontLeft"]
transform = Transform3D(1.5, 8.96211e-15, 4.88954e-15, -8.96211e-15, 0.811858, 1.2613, 4.88955e-15, -1.2613, 0.811858, 0, 0, 0)

[node name="car_wheel" parent="WheelFrontLeft/FrontLeftWheel" instance=ExtResource("4_gk0v1")]
transform = Transform3D(-1, 4.23516e-22, -8.74228e-08, 7.10543e-15, 1, 0, 8.74228e-08, 0, -1, 0.0382915, 0, 0)

[node name="WheelFrontRight" type="RayCast3D" parent="." node_paths=PackedStringArray("wheel_node")]
transform = Transform3D(1, -8.47033e-22, 7.10543e-15, -8.47033e-22, 1, 1.42109e-14, 7.10543e-15, -1.42109e-14, 1, 1.3, 0.424, -1.971)
script = ExtResource("3_iwgla")
wheel_node = NodePath("FrontRightWheel")

[node name="FrontRightWheel" type="Node3D" parent="WheelFrontRight"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)

[node name="car_wheel" parent="WheelFrontRight/FrontRightWheel" instance=ExtResource("4_gk0v1")]
transform = Transform3D(1, -8.74228e-08, -8.74228e-08, -8.74228e-08, -1, -3.38813e-21, -8.74228e-08, 7.64274e-15, -1, -0.05, 0, 0)

[node name="WheelRearLeft" type="RayCast3D" parent="." node_paths=PackedStringArray("wheel_node")]
transform = Transform3D(1, -8.47033e-22, 7.10543e-15, -8.47033e-22, 1, 1.42109e-14, 7.10543e-15, -1.42109e-14, 1, -1.23, 0.427, 1.697)
script = ExtResource("3_iwgla")
wheel_node = NodePath("RearLeftWheel")

[node name="RearLeftWheel" type="Node3D" parent="WheelRearLeft"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)

[node name="car_wheel" parent="WheelRearLeft/RearLeftWheel" instance=ExtResource("4_gk0v1")]
transform = Transform3D(-1, -4.5171e-22, -8.74228e-08, -2.93642e-21, 1, 2.84218e-14, 8.74228e-08, 2.84218e-14, -1, 0, 0, 0)

[node name="WheelRearRight" type="RayCast3D" parent="." node_paths=PackedStringArray("wheel_node")]
transform = Transform3D(1, -8.47033e-22, 7.10543e-15, -8.47033e-22, 1, 1.42109e-14, 7.10543e-15, -1.42109e-14, 1, 1.22993, 0.427258, 1.69665)
script = ExtResource("3_iwgla")
wheel_node = NodePath("RearRightWheel")

[node name="RearRightWheel" type="Node3D" parent="WheelRearRight"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)

[node name="car_wheel" parent="WheelRearRight/RearRightWheel" instance=ExtResource("4_gk0v1")]
transform = Transform3D(1, 3.61112e-34, 0, -3.61112e-34, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="lights" type="Node3D" parent="." node_paths=PackedStringArray("vehicle")]
script = SubResource("GDScript_8mpxf")
vehicle = NodePath("..")

[node name="right" type="SpotLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, -0.706616, 0.980031, -3.07805)
light_color = Color(1, 1, 0.52549, 1)
light_energy = 6.0
shadow_enabled = true
spot_range = 60.0
spot_attenuation = 0.09
spot_angle_attenuation = 1.8025

[node name="left" type="SpotLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0.688328, 0.995846, -3.07805)
light_color = Color(1, 1, 0.52549, 1)
light_energy = 6.0
shadow_enabled = true
spot_range = 60.0
spot_attenuation = 0.09
spot_angle_attenuation = 1.8025

[node name="OmniLight3D" type="OmniLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0236877, 1.98797, 0.142939)
light_color = Color(1, 1, 0.792157, 1)
light_energy = 0.111
shadow_enabled = true

[node name="brake_right" type="OmniLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.737813, 1.06553, 3.07696)
light_color = Color(1, 0, 0, 1)
shadow_enabled = true
omni_range = 1.28142

[node name="brake_left" type="OmniLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.839542, 1.05499, 3.07696)
light_color = Color(1, 0, 0, 1)
shadow_enabled = true
omni_range = 1.28142

[node name="VehicleController" parent="." node_paths=PackedStringArray("vehicle_node") instance=ExtResource("5_vov7g")]
vehicle_node = NodePath("..")
enabled = false

[node name="AuthorityChecker" type="Node" parent="." node_paths=PackedStringArray("node")]
script = ExtResource("6_nlnay")
node = NodePath("..")

[node name="SD_MPPropertySynchronizer" type="Node" parent="."]
process_mode = 3
script = ExtResource("7_5obd8")
properties = Array[ExtResource("8_hul6v")]([SubResource("Resource_yi43l"), SubResource("Resource_b1e7m"), SubResource("Resource_aq5ct"), SubResource("Resource_uvl71"), SubResource("Resource_8mpxf"), SubResource("Resource_a82us"), SubResource("Resource_l7flc")])

[node name="EngineSound" parent="." node_paths=PackedStringArray("vehicle") instance=ExtResource("10_37wps")]
process_mode = 3
stream = ExtResource("12_taasx")
volume_db = 10.0
vehicle = NodePath("..")
sample_rpm = 200.0

[node name="Node" type="Node" parent="."]

[node name="Camera3D" type="Camera3D" parent="Node" node_paths=PackedStringArray("follow_this")]
transform = Transform3D(1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 3.38254, 4)
fov = 81.1
script = ExtResource("12_iealf")
follow_this = NodePath("../..")

[node name="CameraSwitcher" type="Node" parent="." node_paths=PackedStringArray("_cameras")]
script = ExtResource("13_qs44h")
_cameras = [NodePath("../Node/Camera3D")]
metadata/_custom_type_script = "uid://0ksyaacptcju"

[node name="seat_driver" type="Area3D" parent="." node_paths=PackedStringArray("link_point")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.391842, 0.212831, 0)
script = ExtResource("14_b4pc2")
link_point = NodePath("link_point")

[node name="CollisionShape3D" type="CollisionShape3D" parent="seat_driver"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.556608, 0.958914, 0.0927927)
shape = SubResource("BoxShape3D_uvl71")

[node name="link_point" type="Node3D" parent="seat_driver"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.354975, -0.204694)

[connection signal="area_shape_entered" from="seat_driver" to="seat_driver" method="_on_area_shape_entered"]
[connection signal="body_entered" from="seat_driver" to="seat_driver" method="_on_body_entered"]
[connection signal="body_exited" from="seat_driver" to="seat_driver" method="_on_body_exited"]
